MAYA-Modular/logs/salida_2025-05-22_16-53-02.log
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 112, in _get_module_details
  File "C:\Users\francisco.contreras\Desktop\jupyter-projects\notebooks\MAYA-Modular\app\__init__.py", line 2, in <module>
    from app.tablas_busqueda import tablas_bp
  File "C:\Users\francisco.contreras\Desktop\jupyter-projects\notebooks\MAYA-Modular\app\tablas_busqueda.py", line 120
    df_final = pd.read_sql(combinacion_sql, engine)
                                                   ^
IndentationError: unindent does not match any outer indentation level
